--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,35 @@
 [package]
 name = "minio-rsc"
+description = "rust for minio"
+keywords = ["minio", "s3"]
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "minio_rsc"
+path = "src/lib.rs"
+
 [dependencies]
-hyper = "^0.14"
+tokio = { version = "^1", features = ["full"] }
+hyper = { version = "^0.14" }
+reqwest = {version = "^0.11.13", features=["native-tls", "blocking", "rustls-tls", "stream"]}
 chrono = "^0.4"
 rust-crypto = "^0.2"
 hex = "^0.4.2"
+once_cell = "1.13"
+regex="*"
+url = { version = "2" }
+quick-xml = { version = "^0.26.0", features = [ "serialize" ] }
+serde = { version = "1.0", features = [ "derive" ] }
+futures = "^0.3.5"
+futures-core = "^0.3.5"
+futures-util="^0.3.5"
+base64="^0.13.0"
+urlencoding = "^2.1.2"
+
+[dev-dependencies]
+dotenv = "^0.15"
