--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ regex="*"
 url = { version = "2" }
 quick-xml = { version = "^0.26.0", features = [ "serialize" ] }
 serde = { version = "1.0", features = [ "derive" ] }
+serde_json = "1.0"
 futures = "^0.3.5"
 futures-core = "^0.3.5"
 futures-util="^0.3.5"
