--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ keywords = ["minio", "s3"]
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+repository = "https://gitee.com/krealseu/minio-rsc"
 readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
