--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ chrono = "^0.4"
 rust-crypto = "^0.2"
 hex = "^0.4.2"
 once_cell = "1.13"
-regex="*"
+regex="^1.6.0"
 url = { version = "2" }
 quick-xml = { version = "^0.26.0", features = [ "serialize" ] }
 serde = { version = "1.0", features = [ "derive" ] }
