--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "minio-rsc"
 description = "rust for minio"
-keywords = ["minio", "s3"]
-version = "0.1.2"
+keywords = ["minio", "s3", "tokio"]
+version = "0.1.3"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://gitee.com/krealseu/minio-rsc"
@@ -21,12 +21,11 @@ reqwest = {version = "^0.11.13", features=["native-tls", "blocking", "rustls-tls
 chrono = "^0.4"
 rust-crypto = "^0.2"
 hex = "^0.4.2"
-once_cell = "1.13"
+once_cell = "^1.13"
 regex="^1.6.0"
-url = { version = "2" }
 quick-xml = { version = "^0.26.0", features = [ "serialize" ] }
-serde = { version = "1.0", features = [ "derive" ] }
-serde_json = "1.0"
+serde = { version = "^1", features = [ "derive" ] }
+serde_json = "^1"
 futures = "^0.3.5"
 futures-core = "^0.3.5"
 futures-util="^0.3.5"
