--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,20 +17,26 @@ path = "src/lib.rs"
 [dependencies]
 tokio = { version = "^1", features = ["full"] }
 hyper = { version = "^0.14" }
-reqwest = {version = "^0.11.13", features=["native-tls", "blocking", "rustls-tls", "stream"]}
+reqwest = { version = "^0.11.13", features = [
+    "native-tls",
+    "blocking",
+    "rustls-tls",
+    "stream",
+] }
 chrono = "^0.4"
 rust-crypto = "^0.2"
 hex = "^0.4.2"
 once_cell = "^1.13"
-regex="^1.6.0"
-quick-xml = { version = "^0.26.0", features = [ "serialize" ] }
-serde = { version = "^1", features = [ "derive" ] }
+regex = "^1.6.0"
+quick-xml = { version = "0.29.0", features = ["serialize"] }
+serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
 futures = "^0.3.5"
 futures-core = "^0.3.5"
-futures-util="^0.3.5"
-base64="^0.13.0"
+futures-util = "^0.3.5"
+base64 = "^0.21.0"
 urlencoding = "^2.1.2"
+bytes = "^1.2.0"
 
 [dev-dependencies]
 dotenv = "^0.15"
