--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,6 @@ reqwest = { version = "^0.11.13", features = [
     "stream",
 ] }
 chrono = "^0.4"
-rust-crypto = "^0.2"
 hex = "^0.4.2"
 once_cell = "^1.13"
 regex = "^1.6.0"
@@ -37,6 +36,9 @@ futures-util = "^0.3.5"
 base64 = "^0.21.0"
 urlencoding = "^2.1.2"
 bytes = "^1.2.0"
+md5 = "^0.7"
+sha2 = "^0.10"
+hmac = "^0.12.0"
 
 [dev-dependencies]
 dotenv = "^0.15"
