--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ name = "minio_rsc"
 path = "src/lib.rs"
 
 [dependencies]
-tokio = { version = "^1", features = ["full"] }
 hyper = { version = "^0.14" }
 reqwest = { version = "^0.11.13", features = [
     "native-tls",
@@ -39,6 +38,12 @@ bytes = "^1.2.0"
 md5 = "^0.7"
 sha2 = "^0.10"
 hmac = "^0.12.0"
+async-mutex = "1.4.0"
+tokio = { version = "^1", features = ["fs"], optional = true }
+
+[features]
+fs-tokio = ["tokio"]
 
 [dev-dependencies]
 dotenv = "^0.15"
+tokio = { version = "^1", features = ["full"] }
