--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ name = "minio_rsc"
 path = "src/lib.rs"
 
 [dependencies]
-hyper = { version = "^0.14" }
+hyper = { version = "^0.14" ,features = ["stream"]}
 reqwest = { version = "^0.11.13", features = [
     "native-tls",
     "blocking",
