--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ chrono = "^0.4"
 hex = "^0.4.2"
 once_cell = "^1.13"
 regex = "^1.6.0"
-quick-xml = { version = "0.29.0", features = ["serialize"] }
+quick-xml = { version = "^0.29.0", features = ["serialize"] }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
 futures = "^0.3.5"
@@ -38,7 +38,7 @@ bytes = "^1.2.0"
 md5 = "^0.7"
 sha2 = "^0.10"
 hmac = "^0.12.0"
-async-mutex = "1.4.0"
+async-mutex = "^1.4.0"
 tokio = { version = "^1", features = ["fs"], optional = true }
 
 [features]
