--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "minio-rsc"
-description = "rust for minio"
+description = "rust for minio, the api is compliant with the Amazon S3 protocol."
 keywords = ["minio", "s3", "tokio"]
 version = "0.1.5"
 edition = "2021"
@@ -15,7 +15,7 @@ name = "minio_rsc"
 path = "src/lib.rs"
 
 [dependencies]
-hyper = { version = "^0.14" ,features = ["stream"]}
+hyper = { version = "^0.14", features = ["stream"] }
 reqwest = { version = "^0.11.13", features = [
     "native-tls",
     "blocking",
@@ -39,10 +39,11 @@ md5 = "^0.7"
 sha2 = "^0.10"
 hmac = "^0.12.0"
 async-mutex = "^1.4.0"
+async-stream = { version = "^0.3.5", optional = true }
 tokio = { version = "^1", features = ["fs"], optional = true }
 
 [features]
-fs-tokio = ["tokio"]
+fs-tokio = ["tokio", "async-stream"]
 
 [dev-dependencies]
 dotenv = "^0.15"
