--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,12 @@ name = "minio_rsc"
 path = "src/lib.rs"
 
 [dependencies]
-hyper = { version = "^0.14", features = ["stream"] }
-reqwest = { version = "^0.11.13", features = [
-    "native-tls",
-    "blocking",
-    "rustls-tls",
-    "stream",
+hyper = { version = "^0.14.26", features = ["stream"] }
+reqwest = { version = "^0.11.16", features = ["stream"] }
+chrono = { version = "^0.4", default-features = false, features = [
+    "alloc",
+    "clock",
 ] }
-chrono = "^0.4"
 hex = "^0.4.2"
 once_cell = "^1.13"
 regex = "^1.6.0"
