--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ hmac = "^0.12.0"
 async-mutex = "^1.4.0"
 async-stream = { version = "^0.3.5", optional = true }
 tokio = { version = "^1", features = ["fs"], optional = true }
+crc32fast = "1.3.2"
 
 [features]
 fs-tokio = ["tokio", "async-stream"]
