--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,12 @@ reqwest = { version = "^0.11.16", features = ["stream"] }
 chrono = { version = "^0.4", default-features = false, features = [
     "alloc",
     "clock",
+    "serde"
 ] }
 hex = "^0.4.2"
 once_cell = "^1.13"
 regex = "^1.6.0"
-quick-xml = { version = "^0.29.0", features = ["serialize"] }
+quick-xml = { version = "^0.29.0", features = ["serialize", "serde-types"] }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
 futures = "^0.3.5"
@@ -40,6 +41,7 @@ async-mutex = "^1.4.0"
 async-stream = { version = "^0.3.5", optional = true }
 tokio = { version = "^1", features = ["fs"], optional = true }
 crc32fast = "1.3.2"
+strum_macros = "0.25.2"
 
 [features]
 fs-tokio = ["tokio", "async-stream"]
