--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "minio-rsc"
 description = "rust for minio, api is compliant with the Amazon S3 protocol."
 keywords = ["minio", "s3", "tokio"]
-version = "0.1.7"
+version = "0.2.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://gitee.com/krealseu/minio-rsc"
@@ -20,14 +20,12 @@ reqwest = { version = "^0.11.16", features = ["stream"] }
 chrono = { version = "^0.4", default-features = false, features = [
     "alloc",
     "clock",
-    "serde"
+    "serde",
 ] }
 hex = "^0.4.2"
 once_cell = "^1.13"
 regex = "^1.6.0"
-quick-xml = { version = "^0.29.0", features = ["serialize", "serde-types"] }
 serde = { version = "^1", features = ["derive"] }
-serde_json = "^1"
 futures = "^0.3.5"
 futures-core = "^0.3.5"
 futures-util = "^0.3.5"
@@ -41,7 +39,6 @@ async-mutex = "^1.4.0"
 async-stream = { version = "^0.3.5" }
 tokio = { version = "^1", features = ["fs"], optional = true }
 crc32fast = "1.3.2"
-strum_macros = "0.25.2"
 
 [features]
 fs-tokio = ["tokio"]
