--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ serde = { version = "^1", features = ["derive"] }
 futures = "^0.3.5"
 futures-core = "^0.3.5"
 futures-util = "^0.3.5"
-base64 = "^0.21.0"
+base64 = "^0.22"
 urlencoding = "^2.1.2"
 bytes = "^1.2.0"
 md5 = "^0.7"
@@ -39,6 +39,7 @@ async-mutex = "^1.4.0"
 async-stream = { version = "^0.3.5" }
 tokio = { version = "^1", features = ["fs"], optional = true }
 crc32fast = "1.3.2"
+serde-xml-rs = "^0.6"
 
 [features]
 fs-tokio = ["tokio"]
