--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ name = "minio_rsc"
 path = "src/lib.rs"
 
 [dependencies]
-hyper = { version = "^0.14.26", features = ["stream"] }
-reqwest = { version = "^0.11.16", features = ["stream"] }
+hyper = { version = "^1" }
+reqwest = { version = "^0.12", features = ["stream"] }
 chrono = { version = "^0.4", default-features = false, features = [
     "alloc",
     "clock",
