--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ futures-core = "^0.3.5"
 futures-util = "^0.3.5"
 base64 = "^0.22"
 urlencoding = "^2.1.2"
+url = "2.5.2"
 bytes = "^1.2.0"
 md5 = "^0.7"
 sha2 = "^0.10"
